# openai-app

./: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: app.vue  app.vue.less  app.vue.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: loader.vue
src/components/chat/: chat.vue  chat.vue.less  chat.vue.msg.less  chat.vue.ts
src/components/icon/: icon.vue
src/components/menu/: menu.vue  menu.vue.ts
src/components/settings/: settings.vue  settings.vue.less  settings.vue.ts
src/locales/: en.json  fr.json
src/services/: data-service.ts  openai-service.ts
src/styles/: layout.less
