[package]
name = "openai-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["MrRemus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "os-all", "path-all", "fs-all", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
devtools = "0.3.2"
reqwest = { version = "0.12.4", features = ["stream"] }
futures = "0.3"
lazy_static = "1.4.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
xcap = "0.0.10"
webp = "0.2"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
